--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jose": "^5.6.3",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
