--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "sweetalert2": "^11.14.0",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
